# osiris-train

./: pyproject.toml
osiris_train/: __init__.py  __main__.py  ml.py  preprocess.py  repo.py
