[tool.poetry]
name = "osiris-train"
version = "0.1.0"
description = ""
authors = ["Donald AC Martin <donald@donald-martin.ca>"]

[tool.poetry.dependencies]
python = "3.9"
firebase-admin = "^5.2.0"
tensorflow-ranking = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pylint = "^2.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
